--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-accessible-icon": "^1.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.5.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
