--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next", "next/core-web-vitals", "prettier"],
+  "env": {
+    "jest": true,
+    "es6": true
+  },
+  "plugins": ["prettier"],
+  "rules": {
+    "no-console": "warn",
+    "no-use-before-define": "error",
+    "no-unused-vars": [
+      1,
+      {
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "newline-before-return": "error"
+  }
 }
