--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test": "jest --watchAll=false --coverage",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@radix-ui/react-accessible-icon": "^1.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.5.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "14.2.13",
